[package]
name = "bb"
version = "0.1.0"
edition = "2021"
authors = ["cogito123"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.7"
image = "0.24.7"
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.52"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
